@@ -242,7 +242,6 @@ namespace scene
 		visible (if all parents are also visible). */
 		virtual bool isVisible() const
 		{
-			_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 			return IsVisible;
 		}
 
@@ -251,7 +250,6 @@ namespace scene
 		false if this or any parent node is invisible. */
 		virtual bool isTrulyVisible() const
 		{
-			_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 			if(!IsVisible)
 				return false;
 
@@ -328,7 +326,6 @@ namespace scene
 					return true;
 				}
 
-			_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 			return false;
 		}
 
@@ -595,7 +592,6 @@ namespace scene
 		\return If this node is a debug object, true is returned. */
 		bool isDebugObject() const
 		{
-			_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 			return IsDebugObject;
 		}
 
