@@ -153,7 +153,6 @@ void CGUIEditBox::enableOverrideColor(bool enable)
 
 bool CGUIEditBox::isOverrideColorEnabled() const
 {
-	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 	return OverrideColorEnabled;
 }
 
@@ -181,7 +180,6 @@ void CGUIEditBox::updateAbsolutePosition()
 //! Checks if word wrap is enabled
 bool CGUIEditBox::isWordWrapEnabled() const
 {
-	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 	return WordWrap;
 }
 
@@ -197,7 +195,6 @@ void CGUIEditBox::setMultiLine(bool enable)
 //! Checks if multi line editing is enabled
 bool CGUIEditBox::isMultiLineEnabled() const
 {
-	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 	return MultiLine;
 }
 
@@ -217,7 +214,6 @@ void CGUIEditBox::setPasswordBox(bool passwordBox, wchar_t passwordChar)
 
 bool CGUIEditBox::isPasswordBox() const
 {
-	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 	return PasswordBox;
 }
 
@@ -1014,7 +1010,6 @@ void CGUIEditBox::setAutoScroll(bool enable)
 //! \return true if automatic scrolling is enabled, false if not
 bool CGUIEditBox::isAutoScrollEnabled() const
 {
-	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 	return AutoScroll;
 }
 
