@@ -176,7 +176,7 @@ bool CIrrDeviceStub::checkVersion(const char* version)
 		w += version;
 		w += "). This may cause problems.";
 		os::Printer::log(w.c_str(), ELL_WARNING);
-		_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
+
 		return false;
 	}
 
@@ -232,7 +232,6 @@ bool CIrrDeviceStub::postEventFromUser(const SEvent& event)
 	if (!absorbed && inputReceiver)
 		absorbed = inputReceiver->postEventFromUser(event);
 
-	_IRR_IMPLEMENT_MANAGED_MARSHALLING_BUGFIX;
 	return absorbed;
 }
 
